[package]
name = "bitcoin-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
reqwest = "0.11.22"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23.3", features = [
    "tokio-comp",
    "aio",
    "connection-manager",
] }
thiserror = "1.0.50"
chrono = "0.4"
